# breezy

./: .all-contributorsrc  .gitignore  .gitmodules  Breezy.sln  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  THIRD_PARTY_NOTICES  azure-pipelines.build-jobs.template  azure-pipelines.yml
breezy/: CMakeLists.txt
breezy/include/: BreezyCore.h  breezy.h
breezy/src/: BreezyCore.cpp  breezy.def  dllmain.cpp  init.cpp
breezy/test/: init.cpp
breezyfs/: CMakeLists.txt
breezyfs/src/: main.cpp
cmake/: FindBoost.cmake
docs/: CNAME  README.md  _config.yml  index.html
docs/_docs/: configuration.md  index.md  installation.md  introduction.md  troubleshooting.md
docs/_includes/: footer.html  head.html  logo.html  topnav.html
docs/_posts/: 2018-06-10-project-launch.md  2019-12-21- project-resurrection.md  2020-11-15-project-launch.md
src/: CommonAssemblyInfo.cs  Directory.Build.props  Directory.Build.targets
src/Breezy.Core/: Breezy.Core.csproj  Class1.cs
src/Breezy.Core.Tests/: ApplicationCoreExceptionTests.cs  Breezy.Core.Tests.csproj  UnitTest1.cs
src/Breezy.Core/Exception/: ApplicationCoreException.cs  ExitCode.cs
src/BreezyFS.Linux/: BreezyFS.Linux.csproj  Program.cs
src/BreezyFS.Windows/: App.xaml  App.xaml.cs  AssemblyInfo.cs  BreezyFS.Windows.csproj  MainWindow.xaml  MainWindow.xaml.cs
